--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,14 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
 axum = { version = "0.8.4", features = ["tokio", "ws"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
+base64 = "0.22.1"
+dashmap = "6.1.0"
 futures-util = "0.3.31"
 headers = "0.4.1"
+png = "0.18.0"
+rmp-serde = "1.3.0"
 serde = { version = "1.0.226", features = ["derive"] }
 serde_json = "1.0.145"
+tiny-skia = "0.11.4"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-tungstenite = "0.27.0"
 tower-http = { version = "0.6.6", features = ["fs", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+uuid = { version = "1.18.1", features = ["serde", "v4"] }
